@@ -1,3 +1,8 @@
+2016-06-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/dhrystone.c:
+	  Introduce a regression test based on the Dhrystone benchmark.
+
 2016-06-13 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/stm8/gen.c
